# arrow

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  dev_database.yml  docker-compose.yml  entrypoint.sh  install.sh
arrow-ctl/: .env  Cargo.toml  build.rs  sqlx-data.json
arrow-ctl/frontend/: arrow.html  elm.json  package-lock.json  package.json
arrow-ctl/frontend/css/: arrow.css
arrow-ctl/frontend/src/: Api.elm  InputFields.elm  InputParser.elm  InputState.elm  Limits.elm  Main.elm  Message.elm  Models.elm  Notification.elm  Page.elm  Route.elm  Session.elm  Translations.elm
arrow-ctl/frontend/src/Api/: Endpoint.elm  Error.elm
arrow-ctl/frontend/src/Message/: Request.elm
arrow-ctl/frontend/src/Models/: Arrow.elm  Bow.elm  Decode.elm  Deletion.elm  Encode.elm  MachineCommand.elm  MachineStatus.elm  Measure.elm  MeasurePoint.elm  MeasureSeries.elm
arrow-ctl/frontend/src/Page/: Blank.elm  Home.elm  NotFound.elm  Settings.elm
arrow-ctl/frontend/src/Page/Measurement/: BowSelection.elm  Parameters.elm
arrow-ctl/frontend/src/Translations/: BowSelection.elm  Error.elm  Header.elm  Home.elm  Parameters.elm  Warning.elm
arrow-ctl/frontend/src/Units/: Force.elm  ForceUnit.elm  Length.elm  LengthUnit.elm
arrow-ctl/frontend/translations/: translations.de.json  translations.en.json
arrow-ctl/src/: .main.rs.rustfmt  config.rs  controller.rs  main.rs  message.rs  models.rs  serde_timestamp.rs  server.rs
arrow-ctl/src/server/: handler.rs  models.rs  notification.rs
arrow-ctl/src/server/database/: implementation.rs  mod.rs  traits.rs
(+8 files in other folders)
