[package]
name = "arrow"
version = "0.1.0"
authors = ["Jakob Moosbrugger"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2", features = ["full"] }
tokio-stream = "0.1"
warp = "0.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.4", features = ["serde", "v4"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "postgres", "macros", "time" ] }
arrow-hal = { path = "../arrow-hal" }
log = "0.4"
log4rs = "1.0.0"
log4rs-syslog = "3.0"
clap = "2.33.3"
signal-hook-tokio = { version = "0.3.0", features = [ "futures-v0_3" ] }
signal-hook = { version = "0.3.4" }
futures = "0.3"
time = { version = "0.2", features = [ "std", "serde" ] }
thiserror = "1.0"
